customer/deployment-v2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-service-2
  namespace: core
spec:
  selector:
    matchLabels:
      app: customer-service
  template:
    metadata:
      labels:
        app: customer-service
        version: "2.0"
    spec:
      containers:
      - name: customer-service
        image: aditirvan/istio-sample-app:customers-v2.0
        resources:
          limits:
            memory: "128Mi"
            cpu: "100m"
        ports:
        - containerPort: 8080
