customer/service.yml
apiVersion: v1
kind: Service
metadata:
  name: customer-service
  namespace: core
spec:
  selector:
    app: customer-service
  ports:
  - port: 80
    targetPort: 8080
