customer/destination-rule.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: customer-service
  namespace: core
spec:
  host: customer-service.core.svc.cluster.local
  subsets:
  - name: v1
    labels:
      version: "1.0"
  - name: v2
    labels:
      version: "2.0"
  - name: v3
    labels:
      version: "3.0"
